src/mainwindow.cc
@@ -253,6 +253,8 @@ static void set_icon_name_fallback(Gtk::Image *i, const char *name, Gtk::IconSiz
         i->set(name);
     } catch (Gio::Error &e) {
         i->set(name);
+    } catch (Gdk::PixbufError &e) {
+        i->set(name);
     }
 }
 
